fix display on mobile phones

--- a/desafios/desafio03/style.css
+++ b/desafios/desafio03/style.css
@@ -123,6 +123,12 @@ h4 {
     border-radius: 10px 10px 0px 0px;
     margin: 0px;
 }
+picture {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 800px;
+}
 iframe {
     width: 100%;
     height: 400px;
